--- a/app/src/main/res/layout/activity_inventory.xml
+++ b/app/src/main/res/layout/activity_inventory.xml
@@ -7,6 +7,7 @@
     android:layout_height="match_parent"
     tools:context="com.example.usuario.inventorymaterial.ui.inventory.InventoryActivity"
     android:stretchColumns="1"
+    android:id="@+id/android.R.id.content"
     >
 
     <TableRow>
