--- a/app/src/main/res/layout/activity_add_dependency.xml
+++ b/app/src/main/res/layout/activity_add_dependency.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.usuario.inventorymaterial.ui.dependency.AddDependencyActivity"
+    android:id="@+id/android.R.id.content"
     >
     <!--FALTA PONERLE UN ICONO CHECK CUANDO SE EDITE-->
     <!--Jaime ha puesto un menú aquí-->
