--- a/app/src/main/res/layout/activity_dashboard_support.xml
+++ b/app/src/main/res/layout/activity_dashboard_support.xml
@@ -8,7 +8,7 @@
     tools:context="com.example.usuario.inventorymaterial.ui.dashboard.DashboardActivity"
     app:columnCount="3"
     app:orientation="horizontal"
-    android:id="@+id/gdlDashboard"
+    android:id="@+id/android.R.id.content"
     >
 
     <!--
