--- a/app/src/main/res/layout/activity_general_settings.xml
+++ b/app/src/main/res/layout/activity_general_settings.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.usuario.inventorymaterial.GeneralSettingsActivity"
+    android:id="@+id/android.R.id.content"
     >
 
 </android.support.constraint.ConstraintLayout>
