--- a/app/src/main/res/layout/activity_product.xml
+++ b/app/src/main/res/layout/activity_product.xml
@@ -9,6 +9,7 @@
     android:fillViewport="true"
     android:scrollbars="vertical"
     android:orientation="vertical"
+    android:id="@+id/android.R.id.content"
     >
 
     <android.support.constraint.ConstraintLayout
