--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -7,9 +7,8 @@
     android:layout_height="match_parent"
     tools:context="com.example.usuario.inventorymaterial.SplashActivity"
     android:background="@color/colorPrimary"
-
+    android:id="@+id/android.R.id.content"
     >
-
 
     <ImageView
         android:id="@+id/ivwLogo"
@@ -20,7 +19,5 @@
         android:background="@android:color/white"
         android:contentDescription="@string/logo"
         />
-
-
 
 </FrameLayout>
