--- a/app/src/main/res/layout/activity_account_settings.xml
+++ b/app/src/main/res/layout/activity_account_settings.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.usuario.inventorymaterial.AccountSettingsActivity"
+    tools:context="com.example.usuario.inventorymaterial.ui.settings.AccountSettingsActivity"
     android:id="@+id/android.R.id.content"
     >
 
