--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.usuario.inventorymaterial.SplashActivity"
+    tools:context="com.example.usuario.inventorymaterial.ui.splash.SplashActivity"
     android:background="@color/colorPrimary"
     android:id="@+id/android.R.id.content"
     >
